--- a/index.html
+++ b/index.html
@@ -12,30 +12,45 @@ Rajith Sanjaya
         left: 920px;
         bottom: 20px;
     }
+    .bullet{
+        position: absolute;
+        left: 967.5px;
+        bottom: 110px;
+        width: 5px;
+        height: 15px;
+        background-color: black;
+    }
 </style>
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
 </head>
 <body>
+<div class="bullet"></div>
   <div class="plane">
       <img src="assets/img/plane.png" alt="">
   </div>
   <script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
   <script>
-      var left = $('img').offset().left;
+      var imgLeft = $('img').offset().left;
+      var bulletLeft = $(".bullet").offset().left;
           $(window).keydown(function (event) {
              if (event.key=="ArrowLeft") {
-                left = left + 100;
-                 $('img').css("left",left)
-                 console.log(left)
+                imgLeft = imgLeft + 100;
+                bulletLeft = bulletLeft +100;
+                 $('img').css("left",imgLeft)
+                 $('.bullet').css("left",bulletLeft)
+                 console.log(imgLeft)
              }else if (event.key=="ArrowRight"){
-                 left = left - 100;
-                 $("img").css("left",left)
-                 console.log(left)
+                 imgLeft = imgLeft - 100;
+                 bulletLeft = bulletLeft -100;
+                 $("img").css("left",imgLeft)
+                 $('.bullet').css("left",bulletLeft)
+                 console.log(imgLeft)
              }
           });
 
   </script>
+
 </body>
 </html>
