--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@ Rajith Sanjaya
   </div>
   <script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
   <script>
+
+      var bulletUp = parseInt($(".bullet").css("bottom"))
+      $(window).keydown(function (event) {
+          if (event.key=="ArrowUp"){
+              bulletUp = bulletUp + 20;
+              $(".bullet").css("bottom",bulletUp);
+          }else if(event.key=="ArrowDown"){
+              bulletUp = bulletUp - 20;
+              $(".bullet").css("bottom",bulletUp);
+          }
+      })
+
       var imgLeft = $('img').offset().left;
       var bulletLeft = $(".bullet").offset().left;
           $(window).keydown(function (event) {
@@ -48,6 +60,7 @@ Rajith Sanjaya
                  $('.bullet').css("left",bulletLeft)
                  console.log(imgLeft)
              }
+
           });
 
   </script>
