--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@ Rajith Sanjaya
   <script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
   <script>
 
+      setInterval(bulletMove , 200);
       var bulletUp = parseInt($(".bullet").css("bottom"))
-      $(window).keydown(function (event) {
-          if (event.key=="ArrowUp"){
-              bulletUp = bulletUp + 20;
+
+          function bulletMove(e) {
+          bulletUp = bulletUp + 20;
               $(".bullet").css("bottom",bulletUp);
-          }else if(event.key=="ArrowDown"){
-              bulletUp = bulletUp - 20;
-              $(".bullet").css("bottom",bulletUp);
+              if (bulletUp == 790){
+                  bulletUp = 110;
+                  $(".bullet").css("bottom",bulletUp);
+              }
           }
-      })
 
       var imgLeft = $('img').offset().left;
       var bulletLeft = $(".bullet").offset().left;
