--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ Rajith Sanjaya
 <!DOCTYPE html>
 <html lang="en">
 <style>
+
     .plane {
         width: 100px;
         position: absolute;
@@ -18,7 +19,7 @@ Rajith Sanjaya
         bottom: 110px;
         width: 5px;
         height: 15px;
-        background-color: black;
+        background-color: white;
     }
     .ufo {
         width: 100px;
@@ -31,18 +32,37 @@ Rajith Sanjaya
         width: 100px;
     }
 
-    body{
-        background-image: url("assets/img/background.jpg");
+    body > section{
+        position: relative;
+        overflow: hidden;
+        height: 400vh;
+        background-image: url("assets/img/background2.jpg");
         background-repeat: no-repeat;
-        background-position: center;
         background-size: cover;
+        animation-name: sky;
+        animation-duration: 12s;
+        animation-iteration-count: infinite;
+    }
+    
+    @keyframes sky {
+        from{
+            transform:translateY(0);
+
+        }
+        to{
+            transform:translateY(-75%);
+        }
     }
 </style>
+
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
+
 <body>
+<section></section>
 <div class="ufo">
     <img src="assets/img/ufo.png" alt="">
 </div>
@@ -50,6 +70,8 @@ Rajith Sanjaya
   <div class="plane">
       <img src="assets/img/plane.png" alt="">
   </div>
+
+
   <script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
   <script>
 
