--- a/index.html
+++ b/index.html
@@ -43,7 +43,29 @@ Rajith Sanjaya
         animation-duration: 12s;
         animation-iteration-count: infinite;
     }
-    
+
+    .level{
+        width: 400px;
+        color: white;
+        font-weight: bolder;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    .progressbar{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        right: -200px;
+        transform: rotate(90deg);
+        width: 500px;
+
+    }
+
+
     @keyframes sky {
         from{
             transform:translateY(0);
@@ -59,9 +81,11 @@ Rajith Sanjaya
     <meta charset="UTF-8">
     <title>Game</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
 </head>
 
 <body>
+<div class="level"><h1>Level :</h1></div>
 <section></section>
 <div class="ufo">
     <img src="assets/img/ufo.png" alt="">
@@ -71,9 +95,22 @@ Rajith Sanjaya
       <img src="assets/img/plane.png" alt="">
   </div>
 
+<div class="progressbar"></div>
+
 
   <script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+
+
   <script>
+
+
+      $( function() {
+          $( ".progressbar" ).progressbar({
+              value: 37
+          });
+      } );
+
 
       setInterval(bulletMove , 100);
 
@@ -139,6 +176,9 @@ Rajith Sanjaya
                   $(".ufo").css("left",ufoLeft);
               }
           }
+
+
+
 
   </script>
 
