--- a/menu.html
+++ b/menu.html
@@ -6,13 +6,31 @@
     <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
-    <section>
-        <div><h1 class="selected" id="start">Start</h1></div>
-        <div><h1 id="option">Option</h1></div>
-        <div><h1 id="support">Support</h1></div>
-        <div><h1 id="quite">Quite</h1></div>
-    </section>
-    <script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
-    <script src="controllers/menu.js"></script>
+
+<div class="titleContainer"><h1 class="text_shadows">Alien Shooter</h1></div>
+<section>
+    <div>
+        <button class="button-glow selected " role="button" id="start" onclick="window.location.href= 'index.html'"><i
+                class="fa-solid fa-play "></i>START
+        </button>
+    </div>
+    <div>
+        <button class="button-glow " role="button" id="option"><i class="fa-solid fa-gears"></i>OPTION</button>
+    </div>
+    <div>
+        <button class="button-glow " role="button" id="support"><i class="fa-solid fa-circle-dollar-to-slot"></i>SUPPORT
+        </button>
+    </div>
+
+    <div>
+        <button class="button-glow " role="button" id="quit"><i class="fa-solid fa-right-from-bracket"></i>Quit</button>
+    </div>
+</section>
+<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+        data-id="Sanjaya" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF"
+        data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+<script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
+<script src="controllers/menu.js"></script>
+<script src="https://kit.fontawesome.com/0137b60f40.js" crossorigin="anonymous"></script>
 </body>
 </html>
