--- a/index.html
+++ b/index.html
@@ -1,53 +1,36 @@
-<!-- 
-Rajith Sanjaya
- JS_Game
- 3/21/2022 
- -->
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="css/main.css">
 <head>
     <meta charset="UTF-8">
-    <title>Game</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+    <title>Menu</title>
+    <link rel="stylesheet" href="css/menu.css">
 </head>
-
 <body>
-<style>
-    body > section {
-        background-image: url("assets/img/background_vector.gif");
-    }
-</style>
 
-<div class="loader">
-    <img src="assets/img/loader.gif" alt="">
-</div>
-
-<section class="background">
-    <img src="" alt="">
-</section>
-
-<section class="container">
-
-    <div><h1 class="level">Level : 1</h1></div>
-
-    <div class="ufo">
-        <img src="assets/img/ufo.png" alt="">
+<div class="titleContainer"><h1 class="text_shadows">Alien Shooter</h1></div>
+<section>
+    <div>
+        <button class="button-glow selected " role="button" id="start" onclick="window.location.href= 'index.html'"><i
+                class="fa-solid fa-play "></i>START
+        </button>
+    </div>
+    <div>
+        <button class="button-glow " role="button" id="option"><i class="fa-solid fa-gears"></i>OPTION</button>
+    </div>
+    <div>
+        <button class="button-glow " role="button" id="support"><i class="fa-solid fa-circle-dollar-to-slot"></i>SUPPORT
+        </button>
     </div>
 
-    <div class="bullet"></div>
-
-    <div class="plane">
-        <img src="assets/img/plane.png" alt="">
+    <div>
+        <button class="button-glow " role="button" id="quit"><i class="fa-solid fa-right-from-bracket"></i>Quit</button>
     </div>
-
-    <div class="progressbar"></div>
-
 </section>
-
+<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+        data-id="Sanjaya" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF"
+        data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 <script src="assets/js/http_ajax.googleapis.com_ajax_libs_jquery_3.6.0_jquery.js"></script>
-<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
-<script src="controllers/main.js"></script>
+<script src="controllers/menu.js"></script>
+<script src="https://kit.fontawesome.com/0137b60f40.js" crossorigin="anonymous"></script>
 </body>
 </html>
