fix button error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="titleContainer"><h1 class="text_shadows">Alien Shooter</h1></div>
 <section>
     <div>
-        <button class="button-glow selected " role="button" id="start" onclick="window.location.href= 'index.html'"><i
+        <button class="button-glow selected " role="button" id="start" onclick="window.location.href= 'game.html'"><i
                 class="fa-solid fa-play "></i>START
         </button>
     </div>
